<resources>
    <string name="app_name">SellQuick</string>
    <string name="nav_clothes">Clothes</string>
    <string name="nav_books">Books</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="facebook_app_id">2149145425097416</string>
    <string name="facebook_application_id" translatable="false">2149145425097416</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2149145425097416</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="img_dress">dress</string>
    <string name="img_book">book</string>
    <string name="img_book2">book2</string>
    <string name="img_book3">book3</string>
    <string name="img_book4">book4</string>
    <string name="img_shoes">shoes</string>
    <string name="nav_electronics">Electronics</string>
    <string name="nav_music">Music</string>
</resources>
