<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_clothes"
        android:title="@string/nav_clothes"
        android:icon="@drawable/clothes"
        />
    <item
        android:id="@+id/nav_books"
        android:title="@string/nav_books"
        android:icon="@drawable/books"/>
    <item
        android:id="@+id/nav_electronics"
        android:title="@string/nav_electronics"
        android:icon="@drawable/electronics"
        />
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/music"
        android:title="@string/nav_music"/>
    <item
        android:id="@+id/nav_items_list"
        android:title="My items"
        android:icon="@drawable/items"
        />
    <item
        android:id="@+id/nav_signout"
        android:title="@string/nav_sign_out"
        android:icon="@drawable/logoff"/>

</menu>